--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,12 @@ body {
     bottom: 0;
 }
 
+#chicken {
+    position: absolute;
+    right: 0;
+    top: -34px;
+}
+
 hr {
     border-width: 1px;
     border-color: darkgray;
@@ -75,10 +81,7 @@ nav {
     border-width: 1px;
     border-style: dashed;
     border-color: darkgray;
-
-    /*position: sticky;*/
-    /*top: 0;*/
-    /*background: #e3e1d8 url(/static/images/background.jpg);*/
+    position: relative;
 }
 
 nav ul {
@@ -100,7 +103,7 @@ nav ul {
     padding: 0 0.25rem;
 }
 
-footer a, nav a {
+footer a, nav a, #burger-menu a {
     color: gray;
 }
 
