tagline for articles

--- a/templates/blog-add.html
+++ b/templates/blog-add.html
@@ -7,6 +7,8 @@
 <form method="post" action="blog-add">
     <label for="title">title</label><br>
     <input type="text" id="title" name="title"><br>
+    <label for="tagline">tagline</label><br>
+    <input type="text" id="tagline" name="tagline"><br>
     <label for="markdown">markdown</label><br>
     <textarea name="markdown" id="markdown" rows="30" cols="80"></textarea><br>
     <label for="key">super secret key</label><br>
