--- a/static/style.css
+++ b/static/style.css
@@ -72,6 +72,26 @@ footer {
     text-align: center;
 }
 
+blockquote {
+    color: gray;
+    font-style: italic;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px;
+    padding: 0.5em 10px;
+}
+
+blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em;
+}
+blockquote p {
+    display: inline;
+}
+
 /* NAVBAR */
 
 nav {
