started music page

--- a/templates/music.html
+++ b/templates/music.html
@@ -6,35 +6,17 @@ considering i've been at it intermittently for like the last 3 years) :,) take a
 demos here, all are free to use for whatever u want.{% endblock %}
 
 {% block contents %}
-<!--<p>-->
-<!--    i'm learning to produce music (to the extent i can validly say that considering-->
-<!--    i've been at it intermittently for like the last 3 years) :,) take a listen to some-->
-<!--    demos here, all are free to use for whatever u want:-->
-<!--</p>-->
 
-<!--<p>[more will be added later this page is under construction]</p>-->
-
-<!--<div id="folders">-->
-<!--    <div style="left: 0rem; top: 0rem;">-->
-<!--        <a href="static/sounds/demo.ogg">-->
-<!--            <img src="static/images/icons/audio_crop.png">-->
-<!--        </a>-->
-<!--        <p>demo.ogg</p>-->
-<!--    </div>-->
-<!--    <div style="left: 4rem; top: 0rem;">-->
-<!--        <a href="static/sounds/identity.wav">-->
-<!--            <img src="static/images/icons/audio_crop.png">-->
-<!--        </a>-->
-<!--        <p>identity.wav</p>-->
-<!--    </div>-->
-<!--</div>-->
 <p>
-    this page is under construction
+    for the past couple years i've intermittently dabbled in sample-based music production. i don't take anything too
+    seriously (so the mixing has some... issues) but you can take a listen to my brain if you want:
 </p>
-<pre>
-    ____
-\  i | o|
-|>#######
-/(_______)
-</pre>
+
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1782921507&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1546725205&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1318893307&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1260073894&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1141306894%3Fsecret_token%3Ds-V9nnjBqhtBT&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1058181493&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
+
 {% endblock %}
