Added the dropdown on the guestbook page

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -34,6 +34,6 @@
     <label for="key">super secret key</label><br>
     <input type="password" id="key" name="key" required>
     <br><br>
-    <input type="submit" value="add">
+    <input type="submit" value="edit">
 </form>
 {% endblock %}
