--- a/static/style.css
+++ b/static/style.css
@@ -191,10 +191,6 @@ a:not(.card):hover {
     border-style: dashed;
     border-color: darkgray;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1);
-
-    /*position: sticky;*/
-    /*top: 2.3rem;*/
-    /*background: #e3e1d8 url(/static/images/background.jpg);*/
 }
 
 #burger-menu ul {
@@ -219,55 +215,57 @@ a:not(.card):hover {
     }
 }
 
-/* CARDS */
-#cards {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 25px;
-
-}
-
-.card-column {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-    gap: 25px;
-    flex: 1;
-    min-width: 12rem;
+/* MASONRY LAYOUT */
+.masonry {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: 5px;
 }
 
 .card {
-    /* Add shadows to create the "card" effect */
-    width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
     transition: 0.1s;
-    background-color: whitesmoke;
     text-decoration: none;
-    color: black;
+    color: dimgray;
+    background-color: whitesmoke;
+    border: 1px solid darkgray;
 }
 
-.card > img {
-    width: inherit;
+.card img {
+    box-sizing: border-box;
+    /* border: 15px solid white; */
+    width: 100%;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
+    box-shadow: 0 4px 16px -2px rgba(0,0,0,0.3);
+    transform: scale(1.02);
+}
+
+/* On click, scale down */
+.card:active {
+    box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
+    transform: scale(1);
 }
 
 /* Add some padding inside the card container */
-.container {
+.card-text {
     padding: 2px 16px;
 }
 
-.container > h4 {
-    margin: 0.5em 0;
+.card-text h4 {
+    font-family: monospace;
+    color: darkgray;
+    font-size: small;
+    text-transform: uppercase;
+    margin: 1em 0 0.8em 0;
 }
 
-.container > p {
+.card-text p {
     margin-top: 0;
+    font-size: small;
 }
 
 /* GUESTBOOK */
