add imagesLoaded script

--- a/templates/software.html
+++ b/templates/software.html
@@ -32,6 +32,7 @@ open source and on my github too if you're weird like me and wanna know how i ma
 
 <br>
 
+<script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript" src="static/masonry.js"></script>
 
 {% endblock %}
