--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 html {
     background: #e3e1d8 url(/static/images/background.jpg);
+    background-size: 600px;
 }
 
 body {
@@ -218,41 +219,48 @@ a:not(.card):hover {
 /* MASONRY LAYOUT */
 .masonry {
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     grid-auto-rows: 5px;
 }
 
 .card {
-    box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
-    transition: 0.1s;
+    transition: 0.2s;
     text-decoration: none;
     color: dimgray;
     background-color: whitesmoke;
-    border: 1px solid darkgray;
+    border: 4px outset gainsboro;
+    box-sizing: border-box;
+}
+
+.card .img-box {
+    padding: 15px;
+    height: min-content;
+    background-color: white;
 }
 
 .card img {
     box-sizing: border-box;
-    /* border: 15px solid white; */
+    border: 3px inset gainsboro;
     width: 100%;
+    display: block;
+    background-color: gray;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 4px 16px -2px rgba(0,0,0,0.3);
-    transform: scale(1.02);
+    box-shadow: 16px 16px 0 0 rgba(0,0,0,0.1);
 }
 
 /* On click, scale down */
 .card:active {
-    box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
-    transform: scale(1);
+    box-shadow: none;
+    scale: 0.95;
 }
 
 /* Add some padding inside the card container */
 .card-text {
-    padding: 2px 16px;
+    padding: 8px 16px;
 }
 
 .card-text h4 {
@@ -260,7 +268,7 @@ a:not(.card):hover {
     color: darkgray;
     font-size: small;
     text-transform: uppercase;
-    margin: 1em 0 0.8em 0;
+    margin: 0.8em 0;
 }
 
 .card-text p {
