--- a/templates/music.html
+++ b/templates/music.html
@@ -8,8 +8,8 @@ demos here, all are free to use for whatever u want.{% endblock %}
 {% block contents %}
 
 <p>
-    for the past couple years i've intermittently dabbled in sample-based music production. i don't take anything too
-    seriously (so the mixing has some... issues) but you can take a listen to my brain if you want:
+    for the past couple years i've dabbled in sample-based music production. i don't take anything too
+    seriously, but you can take a listen to my brain below!
 </p>
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1782921507&color=%235a232e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
