--- a/static/style.css
+++ b/static/style.css
@@ -225,12 +225,12 @@ a:not(.card):hover {
 }
 
 .card {
-    transition: 0.2s;
+    box-sizing: border-box;
     text-decoration: none;
+    transition: 0.2s;
     color: dimgray;
     background-color: whitesmoke;
     border: 4px outset gainsboro;
-    box-sizing: border-box;
 }
 
 .card .img-box {
@@ -238,12 +238,55 @@ a:not(.card):hover {
     background-color: white;
 }
 
-.card img {
+.card img, .card .loading-animation {
     box-sizing: border-box;
     border: 3px inset gainsboro;
     width: 100%;
+    background-color: lightgray;
+}
+
+.card img {
+    display: none;
+}
+
+.card.loaded img {
     display: block;
-    background-color: gray;
+}
+
+.card .loading-animation {
+    height: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card.loaded .loading-animation {
+    display: none;
+}
+
+.loader {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: dimgray;
+  box-shadow: 24px 0 dimgray, -24px 0 dimgray;
+  position: relative;
+  animation: flash 0.5s ease-out infinite alternate;
+}
+
+@keyframes flash {
+  0% {
+    background-color: darkgray;
+    box-shadow: 24px 0 darkgray, -24px 0 dimgray;
+  }
+  50% {
+    background-color: dimgray;
+    box-shadow: 24px 0 darkgray, -24px 0 darkgray;
+  }
+  100% {
+    background-color: darkgray;
+    box-shadow: 24px 0 dimgray, -24px 0 darkgray;
+  }
 }
 
 .card:hover {
