fix guestbook cookie

--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 {% block description %}there's not really anything here at the moment{% endblock %}
 
 {% block contents %}
-<h1>{{ status }} :(</h1>
-<p>{{ message }}</p>
+<h1>{{ page_context.status }} :(</h1>
+<p>{{ page_context.message }}</p>
 <img src="static/images/yotsuba-koiwai-handshake.gif" width="100rem">
 {% endblock %}
