--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -5,7 +5,7 @@
 
 
 {% block contents %}
-{% if sign_disabled %}
+{% if page_context.sign_disabled %}
 <p style="color: forestgreen">thank you for signing!</p>
 {% else %}
 <p>
