--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -21,34 +21,29 @@
 <script>
     function showMore(guest) {
         const guestIdx = parseInt(guest);
-        let li = document.getElementById("guest-list").children[guestIdx];
-        li.childNodes.forEach((n) => {
-            console.log(n)
-            switch (n.className) {
-                case "more":
-                    n.style.display = "inline"
-                    break;
-                case "link":
-                    n.style.display = "none"
-                    break;
-            }
-        })
+        document.getElementById("more-" + guest).style.display = "inline"
+        document.getElementById("link-" + guest).style.display = "none"
     }
 </script>
 
-<ul id="guest-list">
+<table id="guest-list">
     {% for guest in page_context.guests %}
-    <li>
-        {% if guest.name|length > 100 %}
-        {{ guest.name[:100] }}<span class="more" style="display:none;">{{ guest.name[100:] }}</span>
-        <a class="link" href="javascript:showMore('{{loop.index - 1}}')">
-            <small>more...</small>
-        </a>
-        {% else %}
-        {{ guest.name }}
-        {% endif %}
-    </li>
+    <tr>
+        <td>
+            <small><i style="color:gray;">{{ guest.date }}</i></small>
+        </td>
+        <td>
+            {% if guest.name|length > 100 %}
+            {{ guest.name[:100] }}<span id="more-{{loop.index - 1}}" style="display:none;">{{ guest.name[100:] }}</span>
+            <a id="link-{{loop.index - 1}}" href="javascript:showMore('{{loop.index - 1}}')">
+                <small>more...</small>
+            </a>
+            {% else %}
+            {{ guest.name }}
+            {% endif %}
+        </td>
+    </tr>
     {% endfor %}
-</ul>
+</table>
 
 {% endblock %}
