--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -26,24 +26,19 @@
     }
 </script>
 
-<table id="guest-list">
+<ul id="guest-list">
     {% for guest in page_context.guests %}
-    <tr>
-        <!-- <td>
-             <small><i style="color:gray;">{{ guest.date }}</i></small>
-             </td> -->
-        <td>
-            {% if guest.name|length > 100 %}
-            {{ guest.name[:100] }}<span id="more-{{loop.index - 1}}" style="display:none;">{{ guest.name[100:] }}</span>
-            <a id="link-{{loop.index - 1}}" href="javascript:showMore('{{loop.index - 1}}')">
-                <small>more...</small>
-            </a>
-            {% else %}
-            {{ guest.name }}
-            {% endif %}
-        </td>
-    </tr>
+    <li>
+        {% if guest.name|length > 100 %}
+        {{ guest.name[:100] }}<span id="more-{{loop.index - 1}}" style="display:none;">{{ guest.name[100:] }}</span>
+        <a id="link-{{loop.index - 1}}" href="javascript:showMore('{{loop.index - 1}}')">
+            <small>more...</small>
+        </a>
+        {% else %}
+        {{ guest.name }}
+        {% endif %}
+    </li>
     {% endfor %}
-</table>
+</ul>
 
 {% endblock %}
