--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 
 <html lang="en">
 	<head>
+		<link rel="stylesheet" type="text/css" href="static/style.css">
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +29,6 @@
 		<base href="{{ BASE_URL }}">
 
 		<link rel="icon" href="static/favicons/favicon.ico">
-		<link rel="stylesheet" href="static/style.css">
 
 		<script src="https://kit.fontawesome.com/ca68633975.js" crossorigin="anonymous"></script>
 	</head>
