--- a/static/icomoon.css
+++ b/static/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon/icomoon.eot?9j96dl');
-  src:  url('fonts/icomoon/icomoon.eot?9j96dl#iefix') format('embedded-opentype'),
-    url('fonts/icomoon/icomoon.ttf?9j96dl') format('truetype'),
-    url('fonts/icomoon/icomoon.woff?9j96dl') format('woff'),
-    url('fonts/icomoon/icomoon.svg?9j96dl#icomoon') format('svg');
+  src:  url('fonts/icomoon/icomoon.eot?jvfiaz');
+  src:  url('fonts/icomoon/icomoon.eot?jvfiaz#iefix') format('embedded-opentype'),
+    url('fonts/icomoon/icomoon.ttf?jvfiaz') format('truetype'),
+    url('fonts/icomoon/icomoon.woff?jvfiaz') format('woff'),
+    url('fonts/icomoon/icomoon.svg?jvfiaz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,24 +25,48 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-flask:before {
+.icon-c:before {
   content: "\e900";
 }
-.icon-java:before {
+.icon-cplusplus:before {
   content: "\e901";
 }
-.icon-javascript:before {
+.icon-flask:before {
   content: "\e902";
 }
-.icon-python:before {
+.icon-haskell:before {
   content: "\e903";
 }
-.icon-rust:before {
+.icon-java:before {
   content: "\e904";
 }
-.icon-sdl2:before {
+.icon-javascript:before {
   content: "\e905";
 }
-.icon-vulkan:before {
+.icon-nixos:before {
   content: "\e906";
+}
+.icon-python:before {
+  content: "\e907";
+}
+.icon-racket:before {
+  content: "\e908";
+}
+.icon-redis:before {
+  content: "\e909";
+}
+.icon-rust:before {
+  content: "\e90a";
+}
+.icon-sdl:before {
+  content: "\e90b";
+}
+.icon-sqlite:before {
+  content: "\e90c";
+}
+.icon-typescript:before {
+  content: "\e90d";
+}
+.icon-vulkan:before {
+  content: "\e90e";
 }
