--- a/templates/software.html
+++ b/templates/software.html
@@ -3,23 +3,23 @@
 {% block title %}software | NICK'S COOL WEBSITE{% endblock %}
 {% block description %}
 i do some software development and research in my free time and
-for school (cs major @ northwestern). my main interest areas are graphics and programming
-languages! you can find some of my favorite projects i've done below; all are free and
-open source and on my github too if you're weird like me and wanna know how i made them.
+for school (cs major @ northwestern). my main interest areas are graphics, systems, and
+programming languages! you can find some of my favorite projects i've done below; all are
+free and open source and on my github too if you're weird like me and wanna know how i made them.
 {% endblock %}
 
 {% block contents %}
 <link rel="stylesheet" type="text/css" href="static/icomoon.css">
 <p>
-	i do some software development and research in my free time and
-	for school (cs major @ northwestern). my main interest areas are graphics and programming
-	languages! you can find some of my favorite projects i've done below; all are free and
-	open source and on my github too if you're weird like me and wanna know how i made them.
+i do some software development and research in my free time and
+for school (cs major @ northwestern). my main interest areas are graphics, systems, and
+programming languages! you can find some of my favorite projects i've done below; all are
+free and open source and on my github too if you're weird like me and wanna know how i made them.
 </p>
 
-<p style="font-size:x-small;color:gray">
-P.S. i do apologize if this website is a bit of an assault on the senses... i kinda like it that way...
-</p>
+<!-- <p style="font-size:x-small;color:gray">
+	 P.S. i do apologize if this website is a bit of an assault on the senses... i kinda like it that way...
+	 </p> -->
 
 <br>
 
