--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -22,7 +22,14 @@
     function showMore(guest) {
         const guestIdx = parseInt(guest);
         document.getElementById("more-" + guest).style.display = "inline"
-        document.getElementById("link-" + guest).style.display = "none"
+        document.getElementById("link-more-" + guest).style.display = "none"
+        document.getElementById("link-less-" + guest).style.display = "inline"
+    }
+    function showLess(guest) {
+        const guestIdx = parseInt(guest);
+        document.getElementById("more-" + guest).style.display = "none"
+        document.getElementById("link-more-" + guest).style.display = "inline"
+        document.getElementById("link-less-" + guest).style.display = "none"
     }
 </script>
 
@@ -31,8 +38,11 @@
     <li>
         {% if guest.name|length > 100 %}
         {{ guest.name[:100] }}<span id="more-{{loop.index - 1}}" style="display:none;">{{ guest.name[100:] }}</span>
-        <a id="link-{{loop.index - 1}}" href="javascript:showMore('{{loop.index - 1}}')">
+        <a id="link-more-{{loop.index - 1}}" href="javascript:showMore('{{loop.index - 1}}')">
             <small>more...</small>
+        </a>
+        <a id="link-less-{{loop.index - 1}}" href="javascript:showLess('{{loop.index - 1}}')" style="display:none">
+            <small>less...</small>
         </a>
         {% else %}
         {{ guest.name }}
